[gd_scene load_steps=2 format=3 uid="uid://ry27pmnbewb1"]

[ext_resource type="Script" path="res://main.gd" id="1_tdkf8"]

[node name="Main" type="Node2D"]
script = ExtResource("1_tdkf8")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="SaveConfirmation" type="Label" parent="UI"]
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Note Saved!"

[node name="NewNoteButton" type="Button" parent="UI"]
layout_mode = 2
offset_right = 85.0
offset_bottom = 40.0
text = "New Note"

[node name="SaveButton" type="Button" parent="UI"]
layout_mode = 2
offset_left = 89.0
offset_right = 133.0
offset_bottom = 40.0
text = "Save"

[node name="LoadButton" type="Button" parent="UI"]
layout_mode = 2
offset_left = 137.0
offset_right = 183.0
offset_bottom = 40.0
text = "Load"

[node name="Notes" type="Node2D" parent="."]
